# confuk

./: .gitignore  Dockerfile  LICENSE  README.md  confuk-logo.drawio  pyproject.toml
.github/actions/run-tests/: action.yml
.github/workflows/: test.yaml
confuk/: __init__.py  display.py  doc.py  dump.py  from_config.py  logging.py  main.py  main_decorator.py  parse.py
test/: python_config.py  test.json  test.toml  test.yaml  test_decorators.toml  test_doc.py  test_doc.toml  test_doc.yaml  test_doc_gfm.yaml  test_dump.py  test_from_config.py  test_import.py  test_import.toml  test_import2.toml  test_import_lazy.toml  test_imported.toml  test_imported_lazy.toml  test_interpolation.py  test_interpolation.toml  test_main.py  test_none_casting.yaml  test_parameterized.toml  test_parameterized.yaml  test_post_import.yaml  test_post_imported.yaml  test_read.py
