[tool.poetry]
name = "confuk"
version = "0.14.0"
description = "Yet another configuration loading package for Python projects"
authors = ["Krzysztof J. Czarnecki <kjczarne@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
toml = "^0.10.2"
pydantic = "^2.5.3"
easydict = "^1.11"
omegaconf = "^2.3.0"
ruamel-yaml = "^0.18.6"
rich = "^13.8.1"
jsonpickle = "^4.0.2"
click = "^8.1.8"
markdown = "^3.8"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.24.4"
pylint = "^3.0.3"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
confuk = "confuk.main:main"
