[project]
name = "confuk"
version = "0.17.0"
description = "Yet another configuration loading package for Python projects"
authors = [
    {name = "Krzysztof J. Czarnecki", email = "kjczarne@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "toml>=0.10.2,<0.11",
    "pydantic>=2.5.3,<3",
    "easydict>=1.11,<2",
    "omegaconf>=2.3.0,<3",
    "ruamel-yaml>=0.18.6,<0.19",
    "rich>=13.8.1,<14",
    "jsonpickle>=4.0.2,<5",
    "click>=8.1.8,<9",
    "markdown>=3.8,<4",
    "pydantic-core>=2.41.5,<3",
    "mistune>=3.1.4,<4",
]

[project.scripts]
confuk = "confuk.main:main"

[dependency-groups]
dev = [
    "poethepoet>=0.24.4,<0.25",
    "pylint>=3.0.3,<4",
    "pytest>=8.3.2,<9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
